--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,32 @@
-# Core framework
+# Core
 fastapi==0.115.0
 uvicorn==0.30.6
+python-dotenv==1.0.1
+Jinja2==3.1.4
 
-# Lightweight vision & hashing
+# Embeddings / vision
+sentence-transformers==2.2.2
+transformers==4.30.2
+huggingface-hub==0.14.1
+tokenizers==0.13.3
+torch==2.1.0+cpu
+torchvision==0.16.0+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
+
+# Imaging / video
 pillow==10.2.0
-imagehash==4.3.1
 opencv-python-headless==4.8.1.78
-numpy==1.24.4  # ✅ Works on Python 3.8
+imagehash==4.3.1
 
-# Async, network, utils
+# Async + HTTP
 aiohttp==3.9.3
 requests==2.32.3
-python-dotenv==1.0.1
 
-# Platform integrations
-telethon==1.34.0
+# Google / Telegram
 google-api-python-client==2.147.0
+telethon==1.34.0
 
-# Optional: for reports / templating
+# Reports
 reportlab==4.0.9
-jinja2==3.1.4
+opencv-python
+jinja2
